--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -11,22 +11,14 @@
     </div>
   <% end %>
 
-  <div class="my-5">
-    <%= form.label :title %>
-    <%= form.text_field :title, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": item.errors[:title].none?, "border-red-400 focus:outline-red-600": item.errors[:title].any?}] %>
+  <div class="flex flex-col sm:flex-row items-start sm:items-center gap-2 sm:gap-6">
+    <%= form.label :title, class: "font-bold min-w-6" %>
+    <%= form.text_field :title, class: "px-0 sm:px-3 py-2 w-full outline-none", required: true, placeholder: t(".title_placeholder") %>
   </div>
 
-  <div class="my-5">
-    <%= form.label :description %>
-    <%= form.textarea :description, rows: 4, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": item.errors[:description].none?, "border-red-400 focus:outline-red-600": item.errors[:description].any?}] %>
-  </div>
-
-  <div class="my-5">
-    <%= form.label :status %>
-    <%= form.select :status, Item.statuses.keys, {}, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": item.errors[:status].none?, "border-red-400 focus:outline-red-600": item.errors[:status].any?}] %>
-  </div>
+  <%= form.textarea :description, rows: 4, class: "block shadow-sm rounded-md border px-3 py-2 mt-2 w-full border-gray-400 focus:outline-blue-600 outline-none", placeholder: t(".description_placeholder"), data: { controller: "textarea-autogrow" } %>
 
   <div class="inline">
-    <%= form.submit class: "w-full sm:w-auto rounded-md px-3.5 py-2.5 bg-blue-600 hover:bg-blue-500 text-white inline-block font-medium cursor-pointer" %>
+    <%= form.submit (item.persisted? ? t(".update") : t(".create")), class: "mt-4 rounded-md px-2.5 py-1 bg-blue-600 hover:bg-blue-500 text-white inline-block font-medium cursor-pointer" %>
   </div>
 <% end %>
