--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,14 +1,7 @@
-<div id="<%= dom_id item %>" class="w-full sm:w-auto my-5 space-y-5">
-  <div>
-    <strong class="block font-medium mb-1"><%= t(".title") %>:</strong>
-    <%= item.title %>
-  </div>
-  <div>
-    <strong class="block font-medium mb-1"><%= t(".description") %>:</strong>
-    <%= item.description %>
-  </div>
-  <div>
-    <strong class="block font-medium mb-1"><%= t(".status") %>:</strong>
-    <%= item.status %>
-  </div>
-</div>
+<%= link_to item, class: "w-full my-5 space-y-5 border border-gray-300 rounded-md p-4 flex items-center gap-2", id: dom_id(item) do %>
+  <%= item.title %>
+
+  <% if item.description.present? %>
+    <%= heroicon "document-text", variant: :outline, options: { class: "w-5 h-5" } %>
+  <% end %>
+<% end %>
