--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,10 +1,13 @@
-<% content_for :title, t(".title") %>
+<% content_for :title, @item.title %>
 
-<div class="md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl"><%= t(".title") %></h1>
+<div class="w-full">
+  <div class="flex justify-between items-center">
+    <h1 class="font-bold text-4xl"><%= @item.title %></h1>
+  </div>
+
+  <hr class="my-4 border-gray-300">
 
   <%= render "form", item: @item %>
 
-  <%= link_to t(".show"), @item, class: "w-full sm:w-auto text-center mt-2 sm:mt-0 sm:ml-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
-  <%= link_to t(".back"), items_path, class: "w-full sm:w-auto text-center mt-2 sm:mt-0 sm:ml-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
+  <%= link_to t(".discard"), @item, class: "text-center mt-2 sm:mt-0 sm:ml-2 rounded-md px-2.5 py-1 inline-block font-medium border border-red-500 text-red-500" %>
 </div>
