Add ability to mark done items on index page

--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,5 +1,11 @@
-<%= link_to item, class: "w-full my-5 space-y-5 border border-gray-300 rounded-md p-4 flex items-center gap-2", id: dom_id(item) do %>
-  <%= item.title %>
+<%= link_to item, id: dom_id(item), class: ["w-full my-5 border border-gray-300 rounded-md p-4 flex items-center gap-2", {"bg-gray-100": item.complete_status?}] do %>
+  <%= form_with model: item, url: item_path(item, variant: :list), method: :patch, class: 'contents', data: { controller: "form-autosubmit" } do |form| %>
+    <%= form.check_box :status, {checked: item.complete_status?, data: { action: "click->form-autosubmit#submit:stop" }}, Item.statuses[:complete], Item.statuses[:pending] %>
+  <% end %>
+
+  <%= tag.span class: { "line-through": item.complete_status? } do %>
+    <%= item.title %>
+  <% end %>
 
   <% if item.description.present? %>
     <%= heroicon "document-text", variant: :outline, options: { class: "w-5 h-5" } %>
