--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,4 +1,6 @@
-<%= form_with(model: item, class: "contents") do |form| %>
+<%# locals: (item:) %>
+
+<%= form_with(model: item, method: item.persisted? ? :put : :post, class: "contents") do |form| %>
   <% if item.errors.any? %>
     <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-md mt-3">
       <h2><%= t(".error", count: item.errors.count) %></h2>
