--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,12 +1,17 @@
 <% content_for :title, @item.title %>
 
+<%= turbo_stream_from(dom_id(@item, dom_id(@item.user))) %>
+
 <div class="w-full">
   <% if notice.present? %>
     <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-md inline-block" id="notice"><%= notice %></p>
   <% end %>
 
   <div class="flex justify-between items-end select-none">
-    <h1 class="font-bold text-4xl"><%= @item.title %></h1>
+    <div class="flex gap-2 items-center">
+      <%= render "status_form", item: @item, checkbox_classes: "w-[var(--text-3xl)] h-[var(--text-3xl)]" %>
+      <h1 class="font-bold text-4xl"><%= @item.title %></h1>
+    </div>
     <div data-controller="popup-menu" data-popup-menu-open-class="scale-100 opacity-100" data-turbo-temporary="true">
       <%= heroicon "ellipsis-horizontal-circle", variant: :outline, options: {class: "w-6 h-6", data_popup_menu_target: "trigger"} %>
       <div id="dropdown" data-popup-menu-target="menu" class="absolute right-[180px] z-10 bg-white divide-y divide-gray-100 rounded-lg shadow-sm w-44 dark:bg-gray-700 py-2 px-3.5 mt-2 border border-gray-200 origin-top-right transform scale-0 opacity-0 transition-all duration-200 ease-out">
