Add List domain
* Added the List domain. A user can have many list and every list can have multiple domain
* Ensure the list will broadcast it's status to all pages after create, update or destroy
* Improve brodcast on item status change to ensure all needed views will be updates
* Broadcast item after create and after title or description change
* Add empty state on items list
* Display sidebar only after the user signed in

--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,7 +1,7 @@
 <%# locals: (item:) %>
 
-<%= link_to item, id: dom_id(item), class: ["w-full my-5 border border-gray-300 rounded-md p-4 flex items-center gap-2", {"bg-gray-100": item.complete_status?}] do %>
-  <%= render "items/status_form", item: item, checkbox_classes: "w-5 h-5" %>
+<%= link_to list_item_path(item.list, item), id: dom_id(item), class: ["w-full my-5 border border-gray-300 rounded-md p-4 flex items-center gap-2", {"bg-gray-100": item.complete_status?}] do %>
+  <%= render "items/status_form", item: item, checkbox_classes: "w-5 h-5", id_suffix: :status_form_index %>
 
   <%= tag.span class: { "line-through": item.complete_status? } do %>
     <%= item.title %>
