--- a/app/views/items/_status_form.html.erb
+++ b/app/views/items/_status_form.html.erb
@@ -1,5 +1,5 @@
-<%# locals: (item:, checkbox_classes: '' ) %>
+<%# locals: (item:, checkbox_classes: '', id_suffix: :status_form) %>
 
-<%= form_with model: item, url: item_path(item), method: :patch, id: dom_id(item, :status_form), class: 'contents', data: { controller: "form-autosubmit" } do |form| %>
+<%= form_with model: item, url: list_item_path(item.list, item), method: :patch, id: dom_id(item, id_suffix), class: 'contents', data: { controller: "form-autosubmit" } do |form| %>
   <%= form.check_box :status, {checked: item.complete_status?, data: { action: "click->form-autosubmit#submit:stop" }, class: checkbox_classes}, Item.statuses[:complete], Item.statuses[:pending] %>
 <% end %>
