--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,7 +1,5 @@
 <% content_for :title, @item.title %>
 
-<%= turbo_stream_from(dom_id(@item, dom_id(@item.user))) %>
-
 <div class="w-full">
   <% if notice.present? %>
     <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-md inline-block" id="notice"><%= notice %></p>
@@ -9,7 +7,7 @@
 
   <div class="flex justify-between items-end select-none">
     <div class="flex gap-2 items-center">
-      <%= render "status_form", item: @item, checkbox_classes: "w-[var(--text-3xl)] h-[var(--text-3xl)]" %>
+      <%= render "status_form", item: @item, checkbox_classes: "w-[var(--text-3xl)] h-[var(--text-3xl)]", id_suffix: :status_form_show %>
       <h1 class="font-bold text-4xl"><%= @item.title %></h1>
     </div>
     <div data-controller="popup-menu" data-popup-menu-open-class="scale-100 opacity-100" data-turbo-temporary="true">
@@ -17,13 +15,13 @@
       <div id="dropdown" data-popup-menu-target="menu" class="absolute right-[180px] z-10 bg-white divide-y divide-gray-100 rounded-lg shadow-sm w-44 dark:bg-gray-700 py-2 px-3.5 mt-2 border border-gray-200 origin-top-right transform scale-0 opacity-0 transition-all duration-200 ease-out">
           <ul class="py-2 text-sm text-gray-700 dark:text-gray-200 flex flex-col gap-4" aria-labelledby="dropdownDefaultButton">
             <li>
-              <%= link_to edit_item_path(@item), class: "flex items-center gap-2" do %>
+              <%= link_to edit_list_item_path(@item.list, @item), class: "flex items-center gap-2" do %>
                 <%= heroicon "pencil", variant: :outline, options: { class: "w-5 h-5" } %>
                 <%= t(".edit") %>
               <% end %>
             </li>
             <li>
-              <%= button_to @item, method: :delete, data: { turbo_confirm: t(".confirm_destroy") }, class: "flex items-center gap-2 cursor-pointer" do %>
+              <%= button_to list_item_path(@item.list, @item), method: :delete, data: { turbo_confirm: t(".confirm_destroy") }, class: "flex items-center gap-2 cursor-pointer" do %>
                 <%= heroicon "trash", variant: :outline, options: { class: "w-5 h-5" } %>
                 <%= t(".put_in_trash") %>
               <% end %>
@@ -43,7 +41,7 @@
           <%= simple_format(@item.description) %>
         <% else %>
           <span class="text-gray-500">
-            <%= link_to t(".add_extra_details"), edit_item_path(@item) %>
+            <%= link_to t(".add_extra_details"), edit_list_item_path(@item.list, @item) %>
           </span>
         <% end %>
       </div>
