--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -10,7 +10,7 @@
       <%= render "status_form", item: @item, checkbox_classes: "w-[var(--text-3xl)] h-[var(--text-3xl)]", id_suffix: :status_form_show %>
       <h1 class="font-bold text-4xl"><%= @item.title %></h1>
     </div>
-    <div data-controller="popup-menu" data-popup-menu-open-class="scale-100 opacity-100" data-turbo-temporary="true">
+    <div data-controller="popup-menu" data-popup-menu-open-class="scale-100 opacity-100">
       <%= heroicon "ellipsis-horizontal-circle", variant: :outline, options: {class: "w-6 h-6", data_popup_menu_target: "trigger"} %>
       <div id="dropdown" data-popup-menu-target="menu" class="absolute right-[180px] z-10 bg-white divide-y divide-gray-100 rounded-lg shadow-sm w-44 dark:bg-gray-700 py-2 px-3.5 mt-2 border border-gray-200 origin-top-right transform scale-0 opacity-0 transition-all duration-200 ease-out">
           <ul class="py-2 text-sm text-gray-700 dark:text-gray-200 flex flex-col gap-4" aria-labelledby="dropdownDefaultButton">
