--- a/app/views/identity/password_resets/new.html.erb
+++ b/app/views/identity/password_resets/new.html.erb
@@ -1,9 +1,9 @@
-<p style="color: red"><%= alert %></p>
-
 <% content_for :title, t(".title") %>
 
 <div class="md:w-2/3 w-full">
   <h1 class="font-bold text-4xl"><%= t(".title") %></h1>
+
+  <hr class="my-4 border-gray-300">
 
   <%= form_with(url: identity_password_reset_path) do |form| %>
     <div class="my-5">
@@ -12,7 +12,7 @@
     </div>
 
     <div class="inline">
-      <%= form.submit t(".submit"), class: "w-full sm:w-auto rounded-md px-3.5 py-2.5 bg-blue-600 hover:bg-blue-500 text-white inline-block font-medium cursor-pointer" %>
+      <%= form.submit t(".submit"), class: "w-full sm:w-auto rounded-md px-2.5 py-1 bg-blue-600 hover:bg-blue-500 text-white inline-block font-medium cursor-pointer" %>
     </div>
   <% end %>
 </div>
