--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,31 +24,27 @@
   </head>
 
   <body>
-    <% if notice.present? %>
-      <div data-controller="toast" data-toast-text-value="<%= notice %>" data-toast-close-value="true" data-toast-stop-on-focus-value="true" data-toast-class-name-value="success"></div>
-    <% end %>
+    <div id="toast_container">
+      <% if notice.present? %>
+        <%= render "shared/toast", text: notice, variant: :success %>
+      <% end %>
 
-    <% if alert.present? %>
-      <div data-controller="toast" data-toast-text-value="<%= alert %>" data-toast-close-value="true" data-toast-stop-on-focus-value="true" data-toast-class-name-value="error"></div>
-    <% end %>
+      <% if alert.present? %>
+        <%= render "shared/toast", text: alert, variant: :error %>
+      <% end %>
+    </div>
 
     <% if Current.user %>
       <%= turbo_stream_from(dom_id(Current.user)) %>
 
       <aside id="sidebar" data-turbo-permanent class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0 border-r border-gray-200" aria-label="Sidebar">
         <div class="h-full px-3 py-4 overflow-y-auto bg-gray-50 bg-white dark:bg-gray-800">
-          <ul class="space-y-2 font-medium">
+          <ul class="font-medium">
             <li class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white dark:hover:bg-gray-700 group font-bold text-2xl">
               TodoAPP
             </li>
-            <li>
-              <%= link_to t(".change_password"), edit_password_path, class: "flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group" %>
-            </li>
-            <li>
-              <%= link_to t(".change_email_address"), edit_identity_email_path, class: "flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group" %>
-            </li>
-            <li>
-              <%= link_to t(".devices_sessions"), sessions_path, class: "flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group" %>
+            <li class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
+              <%= link_to t(".account"), account_path %>
             </li>
             <%= turbo_frame_tag "lists", src: lists_path, class: "contents" %>
             <li id="new_list_container"></li>
@@ -57,7 +53,7 @@
       </aside>
     <% end %>
 
-    <main class="sm:ml-64">
+    <main class="<%= class_names("sm:ml-64": Current.user.present?) %>">
       <div class="flex flex-col w-full items-center px-12 lg:px-44 py-16">
         <%= yield %>
       </div>
