--- a/app/views/passwords/edit.html.erb
+++ b/app/views/passwords/edit.html.erb
@@ -1,41 +1,5 @@
-<p style="color: red"><%= alert %></p>
-
 <%= content_for :title, t(".title") %>
 
-<div class="md:w-2/3 w-full">
-  <h1 class="font-bold text-4xl"><%= t(".title") %></h1>
-
-  <%= form_with(url: password_path, method: :patch, class: "contents") do |form| %>
-    <% if @user.errors.any? %>
-      <div style="color: red">
-        <h2><%= t(".error", count: @user.errors.count) %></h2>
-
-        <ul>
-          <% @user.errors.each do |error| %>
-            <li><%= error.full_message %></li>
-          <% end %>
-        </ul>
-      </div>
-    <% end %>
-
-    <div class="my-5">
-      <%= form.label :password_challenge, t(".current_password") %>
-      <%= form.password_field :password_challenge, required: true, autofocus: true, autocomplete: "current-password", class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": @user.errors[:password_challenge].none?, "border-red-400 focus:outline-red-600": @user.errors[:password_challenge].any?}] %>
-    </div>
-
-    <div class="my-5">
-      <%= form.label :password, t(".new_password") %>
-      <%= form.password_field :password, required: true, autocomplete: "new-password", class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": @user.errors[:password].none?, "border-red-400 focus:outline-red-600": @user.errors[:password].any?}] %>
-      <div><%= t(".password_minimum", count: User::MINIMUM_PASSWORD_LENGTH) %></div>
-    </div>
-
-    <div class="my-5">
-      <%= form.label :password_confirmation, t(".confirm_new_password") %>
-      <%= form.password_field :password_confirmation, required: true, autocomplete: "new-password", class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": @user.errors[:password_confirmation].none?, "border-red-400 focus:outline-red-600": @user.errors[:password_confirmation].any?}] %>
-    </div>
-
-    <div class="inline">
-      <%= form.submit t(".submit"), class: "w-full sm:w-auto rounded-md px-3.5 py-2.5 bg-blue-600 hover:bg-blue-500 text-white inline-block font-medium cursor-pointer" %>
-    </div>
-  <% end %>
-</div>
+<%= turbo_frame_tag "password_edit", class: "contents" do %>
+  <%= render "form", user: Current.user %>
+<% end %>
