--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,24 +37,33 @@
     <% if Current.user %>
       <%= turbo_stream_from(dom_id(Current.user)) %>
 
-      <aside id="sidebar" data-turbo-permanent class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0 border-r border-gray-200" aria-label="Sidebar">
-        <div class="h-full px-3 py-4 overflow-y-auto bg-gray-50 bg-white dark:bg-gray-800">
-          <ul class="font-medium">
-            <li class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white dark:hover:bg-gray-700 group font-bold text-2xl">
-              TodoAPP
-            </li>
-            <li class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-              <%= link_to t(".account"), account_path %>
-            </li>
-            <%= turbo_frame_tag "lists", src: lists_path, class: "contents" %>
-            <li id="new_list_container"></li>
-          </ul>
-        </div>
-      </aside>
+      <div data-controller="flowbite--drawer">
+        <button data-flowbite--drawer-target="trigger" aria-controls="sidebar" type="button" class="inline-flex items-center p-2 mt-2 ms-3 text-sm text-gray-500 rounded-lg sm:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
+          <span class="sr-only">Open sidebar</span>
+          <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+          <path clip-rule="evenodd" fill-rule="evenodd" d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 10z"></path>
+          </svg>
+        </button>
+
+        <aside data-turbo-permanent data-flowbite--drawer-target="container" id="sidebar" class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0 border-r border-gray-200" aria-label="Sidebar">
+          <div class="h-full px-3 py-4 overflow-y-auto bg-gray-50 bg-white dark:bg-gray-800">
+            <ul class="font-medium">
+              <li class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white dark:hover:bg-gray-700 group font-bold text-2xl">
+                TodoAPP
+              </li>
+              <li class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
+                <%= link_to t(".account"), account_path, data: {drawer_toggle: "sidebar"} %>
+              </li>
+              <%= turbo_frame_tag "lists", src: lists_path, class: "contents" %>
+              <li id="new_list_container"></li>
+            </ul>
+          </div>
+        </aside>
+      </div>
     <% end %>
 
     <main class="<%= class_names("sm:ml-64": Current.user.present?) %>">
-      <div class="flex flex-col w-full items-center px-12 lg:px-44 py-16">
+      <div class="flex flex-col w-full items-center px-12 lg:px-44 py-8 lg:py-16">
         <%= yield %>
       </div>
     </main>
