--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -2,7 +2,8 @@
 <%= content_for :title, t(".title") %>
 
 <div class="w-full">
-  <div class="flex flex-col md:flex-row gap-8 md:gap-16 mb-8 md:mb-12">
+  <%= turbo_frame_tag "account_edit", src: edit_account_path, class: "contents" %>
+  <div class="flex flex-col md:flex-row gap-8 md:gap-16 my-8 md:my-12">
     <%= turbo_frame_tag "password_edit", src: edit_password_path, class: "contents" %>
     <%= turbo_frame_tag "email_edit", src: edit_identity_email_path, class: "contents" %>
   </div>
