--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -36,7 +36,7 @@
 
     <%= heroicon "funnel", variant: :outline, options: { class: "w-5 h-5 ml-4" } %>
     <%= form_with(url: list_items_path(@list), method: :get, class: "contents", data: {controller: "form-autosubmit", turbo_action: "advance"}) do |form| %>
-      <%= form.select :status, Item.statuses.keys.map { |status| [status.humanize, status] }, {selected: params[:status], include_blank: t(".no_selected_status")}, class: "rounded-md border border-gray-300 px-2 py-1.5", data: { action: "form-autosubmit#submit" } %>
+      <%= form.select :status, Item.statuses.keys.map { |status| [t(".statuses.#{status}"), status] }, {selected: params[:status], include_blank: t(".no_selected_status")}, class: "rounded-md border border-gray-300 px-2 py-1.5", data: { action: "form-autosubmit#submit" } %>
     <% end %>
   </div>
 
