--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -4,8 +4,39 @@
 <div class="w-full">
   <%= turbo_frame_tag "account_edit", src: edit_account_path, class: "contents" %>
   <div class="flex flex-col md:flex-row gap-8 md:gap-16 my-8 md:my-12">
-    <%= turbo_frame_tag "password_edit", src: edit_password_path, class: "contents" %>
-    <%= turbo_frame_tag "email_edit", src: edit_identity_email_path, class: "contents" %>
+    <%= turbo_frame_tag "password_edit", src: edit_password_path, class: "contents" do %>
+      <div class="w-1/2 animate-pulse">
+        <div class="w-3/4 h-12 bg-gray-300 rounded-md mb-4"></div>
+        <hr class="my-4 border-gray-300">
+        <div class="w-1/6 h-8 bg-gray-300 rounded-md mb-4"></div>
+        <div class="w-full h-12 bg-gray-300 rounded-md mb-4"></div>
+        <div class="w-1/6 h-8 bg-gray-300 rounded-md mb-4"></div>
+        <div class="w-full h-12 bg-gray-300 rounded-md mb-4"></div>
+        <div class="w-1/6 h-8 bg-gray-300 rounded-md mb-4"></div>
+        <div class="w-full h-12 bg-gray-300 rounded-md mb-4"></div>
+        <div class="w-1/4 h-8 bg-gray-300 rounded-md mb-4"></div>
+      </div>
+    <% end %>
+    <%= turbo_frame_tag "email_edit", src: edit_identity_email_path, class: "contents" do %>
+      <div class="w-1/2 animate-pulse">
+        <div class="w-3/4 h-12 bg-gray-300 rounded-md mb-4"></div>
+        <hr class="my-4 border-gray-300">
+        <div class="w-1/6 h-8 bg-gray-300 rounded-md mb-4"></div>
+        <div class="w-full h-12 bg-gray-300 rounded-md mb-4"></div>
+        <div class="w-1/6 h-8 bg-gray-300 rounded-md mb-4"></div>
+        <div class="w-full h-12 bg-gray-300 rounded-md mb-4"></div>
+        <div class="w-1/4 h-8 bg-gray-300 rounded-md mb-4"></div>
+      </div>
+    <% end %>
   </div>
-  <%= turbo_frame_tag "sessions", src: sessions_path, class: "contents" %>
+  <%= turbo_frame_tag "sessions", src: sessions_path, class: "contents" do %>
+    <div class="w-full animate-pulse">
+      <div class="w-1/3 h-12 bg-gray-300 rounded-md mb-4"></div>
+      <hr class="my-4 border-gray-300">
+      <div class="w-full h-8 bg-gray-300 rounded-md mb-4"></div>
+      <div class="w-1/6 h-8 bg-gray-300 rounded-md mb-4"></div>
+      <div class="w-1/4 h-8 bg-gray-300 rounded-md mb-4"></div>
+      <div class="w-1/8 h-8 bg-gray-300 rounded-md mb-4"></div>
+    </div>
+  <% end %>
 </div>
