--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,8 +1,8 @@
-<% content_for :title, @item.title %>
+<% content_for :title, t(".title") %>
 
 <div class="w-full">
   <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl"><%= @item.title %></h1>
+    <h1 class="font-bold text-4xl"><%= t(".title") %></h1>
   </div>
 
   <hr class="my-4 border-gray-300">
